[project]
name = "nws-kml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.119.0",
    "simplekml>=1.3.6",
    "tomlkit>=0.14.0",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260205",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nws_kml"]

[project.scripts]
nwskml = "nws_kml.cli:main"
